Fix the min-height extra padding on mobile view of SRS bar chart

--- a/web/revtk/review-home.juicy.css
+++ b/web/revtk/review-home.juicy.css
@@ -59,14 +59,3 @@
 .barchart-cols .bar.zero .val { color:#a5a59c; }
 .barchart-cols .bar.zero .lbl {}
 
-
-/* ---------------------------- */
-/* Vue.js  Leitner Chart */
-/* ---------------------------- */
-
-/* leitner chart component (root) */
-#leitner-chart_pane {
-  padding:1em;
-  /* to avoid content jumping while loading */
-  min-height:298px;
-}
